{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 19,
  "lineage": "c11187d5-184b-454f-9464-5337c92dcee7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356705062463:security-group/sg-9c5aa9d6",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-9c5aa9d6",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-b24782d4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:356705062463:vpc/vpc-b24782d4",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-2dc15246",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-b84db1de",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-b24782d4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-3bd69f5d",
            "owner_id": "356705062463",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:loadbalancer/app/ecs-main/0ec9431eb9ce726b",
            "arn_suffix": "app/ecs-main/0ec9431eb9ce726b",
            "dns_name": "ecs-main-899474575.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:loadbalancer/app/ecs-main/0ec9431eb9ce726b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-main",
            "security_groups": [
              "sg-9c5aa9d6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-9bdabfc2"
              },
              {
                "subnet_id": "subnet-a9d079cf"
              },
              {
                "subnet_id": "subnet-e0bb62a8"
              }
            ],
            "subnets": [
              "subnet-9bdabfc2",
              "subnet-a9d079cf",
              "subnet-e0bb62a8"
            ],
            "tags": {
              "project": "insurance",
              "service": "service-a"
            },
            "vpc_id": "vpc-b24782d4",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "data.aws_subnet_ids.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:listener/app/ecs-main/0ec9431eb9ce726b/11e0e29b1b406404",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:targetgroup/service-a/82ea68851922e8db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:listener/app/ecs-main/0ec9431eb9ce726b/11e0e29b1b406404",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:loadbalancer/app/ecs-main/0ec9431eb9ce726b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_main",
            "aws_lb_target_group.service_a",
            "data.aws_subnet_ids.main",
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:targetgroup/service-a/82ea68851922e8db",
            "arn_suffix": "targetgroup/service-a/82ea68851922e8db",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:356705062463:targetgroup/service-a/82ea68851922e8db",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "service-a",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "project": "insurance",
              "service": "service-a"
            },
            "target_type": "ip",
            "vpc_id": "vpc-b24782d4"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}